--- a/public/404.html
+++ b/public/404.html
@@ -38,6 +38,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const redirect = sessionStorage.redirect;
+            delete sessionStorage.redirect;
+            if (redirect && redirect !== location.href) {
+                history.replaceState(null, null, redirect);
+            }
+        });
+    </script>
 </body>
 
 </html>
