--- a/public/404.html
+++ b/public/404.html
@@ -39,8 +39,13 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script>
-        sessionStorage.redirect = location.pathname + location.search + location.hash;
-        location.replace('/');
+        document.addEventListener('DOMContentLoaded', () => {
+            const redirect = sessionStorage.redirect;
+            delete sessionStorage.redirect;
+            if (redirect && redirect !== location.href) {
+                history.replaceState(null, null, redirect);
+            }
+        });
     </script>
 </body>
 
