--- a/public/404.html
+++ b/public/404.html
@@ -42,8 +42,8 @@
         document.addEventListener('DOMContentLoaded', () => {
             const redirect = sessionStorage.redirect;
             delete sessionStorage.redirect;
-            if (redirect && redirect !== location.href) {
-                history.replaceState(null, null, redirect);
+            if (redirect) {
+                window.location.replace(redirect);
             }
         });
     </script>
