--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,15 @@
     <div id="root"></div>
 
     <script>
-        sessionStorage.redirect = location.href;
+        (function() {
+            const redirect = sessionStorage.redirect;
+            delete sessionStorage.redirect;
+            if (redirect && redirect !== location.pathname) {
+                history.replaceState(null, null, redirect);
+            }
+        })();
     </script>
+
 </body>
 
 </html>
