--- a/public/404.html
+++ b/public/404.html
@@ -39,14 +39,10 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const redirect = sessionStorage.redirect;
-            delete sessionStorage.redirect;
-            if (redirect) {
-                window.location.replace(redirect);
-            }
-        });
+        sessionStorage.redirect = location.pathname + location.search + location.hash;
+        window.location.replace('/cssg-project/');
     </script>
+
 </body>
 
 </html>
